# movie-grpc-tonic-axum

./: Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  README.md  build.rs  docker-compose.yml  otel-collector.yaml  prometheus.yml
.github/workflows/: rust.yaml
proto/: movie.proto
src/: client.rs  server.rs
