[package]
name = "movie_tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "movie-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "movie-client"
path = "src/client.rs"


[dependencies]
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.42.0", features = ["full"] }

uuid = { version = "1.11.0", features = ["v4"] }


serde = { version = "1.0.215", features = ["derive"] }
axum = "0.7.9"
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.133"

opentelemetry_sdk = { version="0.27.1",features = ["rt-tokio"]}
opentelemetry-stdout = { version="0.27.0", features= ["trace"]}

opentelemetry = "0.27.1"
prometheus-client = "0.22.3"
prometheus-client-derive-encode = "0.4.2"


[build-dependencies]
tonic-build = "0.12.3"
