[package]
name = "movie_tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "movie-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "movie-client"
path = "src/client.rs"


[dependencies]
opentelemetry = "0.28.0"
opentelemetry_sdk = { version="0.28.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version="0.28.0", features = ["trace"] }
opentelemetry-otlp = { version="0.28.0", features = ["grpc-tonic"] }
tokio = { version="1.43.0", features = ["full"] }
prost = "0.13.5"
axum = "0.8.1"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.138"
prometheus-client = "0.23.1"
prometheus-client-derive-encode = "0.4.2"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.13.1", features = ["v4"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
